main/src/velexplanation/vel/parsing/VELParser.java
/* Generated By:JavaCC: Do not edit this line. VELParser.java */
/* Insert the default contents of the file here.  May need imoprts etc.
 */
package velexplanation.vel.parsing;

import burlap.mdp.core.action.ActionType;
import burlap.mdp.core.oo.propositional.PropositionalFunction;
import burlap.mdp.core.oo.state.OOState;
import burlap.mdp.core.oo.state.OOStateUtilities;
import burlap.mdp.core.oo.state.ObjectInstance;
import burlap.mdp.core.state.State;
import burlap.mdp.singleagent.SADomain;
import burlap.mdp.singleagent.oo.OOSADomain;
import org.apache.commons.math3.linear.RealVector;
import rabinizer.bdd.*;
import rabinizer.formulas.*;
import velexplanation.actions.ObjectParameterizedActionType;
import velexplanation.formula.ParamPlaceholder;
import velexplanation.misc.Pair;
import velexplanation.rewardvector.comparator.MixedLexicographicWeightedComparator;
import velexplanation.vel.VELObjective;

import java.io.StringReader;
import java.util.*;

public class VELParser implements VELParserConstants {
    static private int[] jj_la1_0;

    static {
        jj_la1_init_0();
    }

    final private int[] jj_la1 = new int[0];
    final private JJCalls[] jj_2_rtns = new JJCalls[30];
    final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    /**
     * Generated Token Manager.
     */
    public VELParserTokenManager token_source;
    /**
     * Current token.
     */
    public Token token;
    /**
     * Next token.
     */
    public Token jj_nt;
    protected Map<String, List<String>> props;
    protected Map<String, List<String>> objs;
    protected Map<String, String> objectiveParams;
    protected Set<String> specificObjects;
    protected SADomain d = null;
    protected Globals globals;
    SimpleCharStream jj_input_stream;
    private int jj_ntk;
    private Token jj_scanpos, jj_lastpos;
    private int jj_la;
    private int jj_gen;
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;

    public VELParser(Globals globals, java.io.Reader reader) {
        this(reader);
        this.globals = globals;
    }

    /**
     * Constructor with InputStream.
     */
    public VELParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public VELParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new VELParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 0; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public VELParser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new VELParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 0; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public VELParser(VELParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 0; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    public static Pair<List<VELObjective>, Comparator<RealVector>> parseFromText(String text, SADomain d, State s) throws ParseException {
        Globals globals = new Globals();
        globals.bddForFormulae = new BDDForFormulae();
        globals.bddForVariables = new BDDForVariables();
        globals.vsBDD = new ValuationSetBDD(globals);
        globals.aV = new AllValuations();

        return new VELParser(globals, new StringReader(text)).parse(d, s);
    }

    public static Pair<List<VELObjective>, Comparator<RealVector>> parseFromText(Globals globals, String text, SADomain d, State s) throws ParseException {
        return new VELParser(globals, new StringReader(text)).parse(d, s);
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[]{};
    }

    public Pair<List<VELObjective>, Comparator<RealVector>> parse(SADomain d, State s) throws ParseException {
        this.d = d;
        this.props = new HashMap<String, List<String>>();
        this.specificObjects = new HashSet<String>();

        if (d instanceof OOSADomain) {
            for (PropositionalFunction pf : ((OOSADomain) d).propFunctions()) {
                props.put(pf.getName(), Arrays.asList(pf.getParameterClasses()));
            }
        }

        for (ActionType aT : d.getActionTypes()) {
            if (!(aT instanceof ObjectParameterizedActionType)) {
                props.put(aT.typeName(), new ArrayList<String>());
            } else {
                props.put(aT.typeName(), Arrays.asList(((ObjectParameterizedActionType) aT).getParameterClasses()));
            }
        }
        Map<String, List<ObjectInstance>> map;
        if (s instanceof OOState) {
            map = OOStateUtilities.objectsByClass((OOState) s);
        } else {
            map = new HashMap<String, List<ObjectInstance>>();
        }

        this.objs = new HashMap<String, List<String>>();
        for (String key : map.keySet()) {
            List<String> objects = new ArrayList<String>();
            for (ObjectInstance o : map.get(key)) {
                objects.add(o.name());
            }
            this.objs.put(key, objects);
        }

        globals.bddForVariables.bijectionIdAtom = new BijectionIdAtom();
        this.objectiveParams = new HashMap<String, String>();
        return weightedObjectives();
    }

    final public Pair<List<VELObjective>, Comparator<RealVector>> weightedObjectives() throws ParseException {
        VELObjective result;

        List<VELObjective> toReturn = new ArrayList<VELObjective>();
        List<Double> weights = new ArrayList<Double>();
        List<Integer> priorities = new ArrayList<Integer>();
        int curPriority = 0;

        Formula r;
        double weight = 1.0;
        Token t;
        if (jj_2_1(2)) {
            t = jj_consume_token(NUM);
            weight = Double.parseDouble(t.image);
            jj_consume_token(COL);
        } else {
            ;
        }
        result = singleObjective();
        toReturn.add(result);
        weights.add(weight);
        priorities.add(curPriority);
        weight = 1.0;
        label_1:
        while (true) {
            if (jj_2_2(2)) {
                ;
            } else {
                break label_1;
            }
            if (jj_2_3(2)) {
                jj_consume_token(SEMI);
            } else if (jj_2_4(2)) {
                jj_consume_token(RANG);
                jj_consume_token(RANG);
                curPriority -= 1;
            } else {
                jj_consume_token(-1);
                throw new ParseException();
            }
            if (jj_2_5(2)) {
                t = jj_consume_token(NUM);
                weight = Double.parseDouble(t.image);
                jj_consume_token(COL);
            } else {
                ;
            }
            result = singleObjective();
            toReturn.add(result);
            weights.add(weight);
            priorities.add(curPriority);
            weight = 1.0;
        }
        {
            if (true) return new Pair<List<VELObjective>,
                    Comparator<RealVector>>(toReturn, new MixedLexicographicWeightedComparator(
                    priorities,
                    weights,
                    1E-3
            ));
        }
        throw new Error("Missing return statement in function");
    }

    final public VELObjective singleObjective() throws ParseException {
        Set<String> costlyVariables = new HashSet<String>();
        List<String> quantifiedVariables = new ArrayList<String>();
        List<Boolean> quantificationTypes = new ArrayList<Boolean>();
        boolean durative = false;
        Formula formula;
        objectiveParams.clear();
        String var;
        if (jj_2_12(2)) {
            if (jj_2_7(2)) {
                jj_consume_token(LANG);
                var = jj_consume_token(ID).image;
                costlyVariables.add(var);
                label_2:
                while (true) {
                    if (jj_2_6(2)) {
                        ;
                    } else {
                        break label_2;
                    }
                    jj_consume_token(COM);
                    var = jj_consume_token(ID).image;
                    costlyVariables.add(var);
                }
                jj_consume_token(RANG);
            } else {
                ;
            }
            label_3:
            while (true) {
                if (jj_2_8(2)) {
                    ;
                } else {
                    break label_3;
                }
                if (jj_2_9(2)) {
                    jj_consume_token(UNIV);
                    var = jj_consume_token(ID).image;
                    quantifiedVariables.add(var);
                    quantificationTypes.add(true);
                } else if (jj_2_10(2)) {
                    jj_consume_token(EXIS);
                    var = jj_consume_token(ID).image;
                    quantifiedVariables.add(var);
                    quantificationTypes.add(false);
                } else {
                    jj_consume_token(-1);
                    throw new ParseException();
                }
            }
            if (jj_2_11(2)) {
                jj_consume_token(DUR);
                durative = true;
            } else {
                ;
            }
            jj_consume_token(COL);
        } else {
            ;
        }
        formula = implication();
        {
            if (true) return new VELObjective((OOSADomain) d, formula, costlyVariables, quantifiedVariables,
                    quantificationTypes, durative);
        }

        throw new Error("Missing return statement in function");
    }

    final public Formula implication() throws ParseException {
        Formula r = null;
        Formula result;
        result = disjunction();
        if (jj_2_13(2)) {
            jj_consume_token(IMP);
            r = disjunction();
            result = new Implication(result, r);
        } else {
            ;
        }
        {
            if (true) return result;
        }
        throw new Error("Missing return statement in function");
    }

    final public Formula disjunction() throws ParseException {
        Formula r = null;
        Formula result;
        result = conjunction();
        label_4:
        while (true) {
            if (jj_2_14(2)) {
                ;
            } else {
                break label_4;
            }
            jj_consume_token(OR);
            r = conjunction();
            result = new Disjunction(result, r);
        }
        {
            if (true) return result;
        }
        throw new Error("Missing return statement in function");
    }

    final public Formula conjunction() throws ParseException {
        Formula result;
        Formula r = null;
        result = until();
        label_5:
        while (true) {
            if (jj_2_15(2)) {
                ;
            } else {
                break label_5;
            }
            jj_consume_token(AND);
            r = until();
            result = new Conjunction(result, r);
        }
        {
            if (true) return result;
        }
        throw new Error("Missing return statement in function");
    }

    final public Formula until() throws ParseException {
        Formula result;
        Formula r = null;
        result = unaryOp();
        if (jj_2_19(2)) {
            if (jj_2_16(2)) {
                jj_consume_token(UOP);
                r = unaryOp();
                result = new UOperator(result, r);
            } else if (jj_2_17(2)) {
                jj_consume_token(VOP);
                r = unaryOp();
                result = new VOperator(result, r);
            } else if (jj_2_18(2)) {
                jj_consume_token(WOP);
                r = unaryOp();
                result = new VOperator(new Disjunction(new Negation(result), r),
                        new Disjunction(result, r));
            } else {
                jj_consume_token(-1);
                throw new ParseException();
            }
        } else {
            ;
        }
        {
            if (true) return result;
        }
        throw new Error("Missing return statement in function");
    }

    final public Formula unaryOp() throws ParseException {
        Formula f;
        if (jj_2_20(2)) {
            jj_consume_token(FOP);
            f = unaryOp();
            {
                if (true) return new FOperator(f);
            }
        } else if (jj_2_21(2)) {
            jj_consume_token(GOP);
            f = unaryOp();
            {
                if (true) return new GOperator(f);
            }
        } else if (jj_2_22(2)) {
            jj_consume_token(XOP);
            f = unaryOp();
            {
                if (true) return new XOperator(f);
            }
        } else if (jj_2_23(2)) {
            jj_consume_token(NEG);
            f = unaryOp();
            {
                if (true) return new Negation(f);
            }
        } else if (jj_2_24(2)) {
            f = atom();
            {
                if (true) return f;
            }
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    final public Formula atom() throws ParseException {
        String atomString;
        int id;
        Formula f;
        String nextParam;
        List<String> params = new ArrayList<String>();
        if (jj_2_27(2)) {
            jj_consume_token(TRUE);
            {
                if (true) return new BooleanConstant(true, globals);
            }
        } else if (jj_2_28(2)) {
            jj_consume_token(FALSE);
            {
                if (true) return new BooleanConstant(false, globals);
            }
        } else if (jj_2_29(2)) {
            atomString = jj_consume_token(ID).image;
            if (jj_2_26(2)) {
                jj_consume_token(LPAR);
                nextParam = jj_consume_token(ID).image;
                params.add(nextParam);
                label_6:
                while (true) {
                    if (jj_2_25(2)) {
                        ;
                    } else {
                        break label_6;
                    }
                    jj_consume_token(COM);
                    nextParam = jj_consume_token(ID).image;
                    params.add(nextParam);
                }
                jj_consume_token(RPAR);
            } else {
                ;
            }
            if (!props.containsKey(atomString)) {
                if (true) throw new ParseException("Can't read atom " + atomString);
            }
            if (params.size() != props.get(atomString).size()) {
                if (true) throw new ParseException();
            }
            for (int i = 0; i < params.size(); i++) {
                String param = params.get(i);
                String cls = props.get(atomString).get(i);
                if (objs.get(cls).contains(param)) {
                    specificObjects.add(param);
                }
                if (objectiveParams.containsKey(param) && !objectiveParams.get(param).equals(cls)) {
                    if (true) throw new ParseException();
                } else if (!objectiveParams.containsKey(param)) {
                    objectiveParams.put(param, cls);
                }
            }
            if (params.isEmpty()) {
                int i = globals.bddForVariables.bijectionIdAtom.id(atomString);
                {
                    if (true) return new Literal(atomString, i, false, globals);
                }
            }
            f = new ParamPlaceholder(atomString, params, globals);
            for (String specificObject : specificObjects) {
                f = f.applyParam(specificObject, specificObject);
            }
            {
                if (true) return f;
            }
        } else if (jj_2_30(2)) {
            jj_consume_token(LPAR);
            f = implication();
            jj_consume_token(RPAR);
            {
                if (true) return f;
            }
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    private boolean jj_2_1(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_1();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(0, xla);
        }
    }

    private boolean jj_2_2(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_2();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(1, xla);
        }
    }

    private boolean jj_2_3(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_3();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(2, xla);
        }
    }

    private boolean jj_2_4(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_4();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(3, xla);
        }
    }

    private boolean jj_2_5(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_5();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(4, xla);
        }
    }

    private boolean jj_2_6(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_6();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(5, xla);
        }
    }

    private boolean jj_2_7(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_7();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(6, xla);
        }
    }

    private boolean jj_2_8(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_8();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(7, xla);
        }
    }

    private boolean jj_2_9(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_9();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(8, xla);
        }
    }

    private boolean jj_2_10(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_10();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(9, xla);
        }
    }

    private boolean jj_2_11(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_11();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(10, xla);
        }
    }

    private boolean jj_2_12(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_12();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(11, xla);
        }
    }

    private boolean jj_2_13(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_13();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(12, xla);
        }
    }

    private boolean jj_2_14(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_14();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(13, xla);
        }
    }

    private boolean jj_2_15(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_15();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(14, xla);
        }
    }

    private boolean jj_2_16(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_16();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(15, xla);
        }
    }

    private boolean jj_2_17(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_17();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(16, xla);
        }
    }

    private boolean jj_2_18(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_18();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(17, xla);
        }
    }

    private boolean jj_2_19(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_19();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(18, xla);
        }
    }

    private boolean jj_2_20(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_20();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(19, xla);
        }
    }

    private boolean jj_2_21(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_21();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(20, xla);
        }
    }

    private boolean jj_2_22(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_22();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(21, xla);
        }
    }

    private boolean jj_2_23(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_23();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(22, xla);
        }
    }

    private boolean jj_2_24(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_24();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(23, xla);
        }
    }

    private boolean jj_2_25(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_25();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(24, xla);
        }
    }

    private boolean jj_2_26(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_26();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(25, xla);
        }
    }

    private boolean jj_2_27(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_27();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(26, xla);
        }
    }

    private boolean jj_2_28(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_28();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(27, xla);
        }
    }

    private boolean jj_2_29(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_29();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(28, xla);
        }
    }

    private boolean jj_2_30(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_30();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(29, xla);
        }
    }

    private boolean jj_3_15() {
        if (jj_scan_token(AND)) return true;
        if (jj_3R_10()) return true;
        return false;
    }

    private boolean jj_3R_9() {
        if (jj_3R_10()) return true;
        return false;
    }

    private boolean jj_3_1() {
        if (jj_scan_token(NUM)) return true;
        if (jj_scan_token(COL)) return true;
        return false;
    }

    private boolean jj_3_29() {
        if (jj_scan_token(ID)) return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3_26()) jj_scanpos = xsp;
        return false;
    }

    private boolean jj_3_14() {
        if (jj_scan_token(OR)) return true;
        if (jj_3R_9()) return true;
        return false;
    }

    private boolean jj_3_28() {
        if (jj_scan_token(FALSE)) return true;
        return false;
    }

    private boolean jj_3R_12() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3_27()) {
            jj_scanpos = xsp;
            if (jj_3_28()) {
                jj_scanpos = xsp;
                if (jj_3_29()) {
                    jj_scanpos = xsp;
                    if (jj_3_30()) return true;
                }
            }
        }
        return false;
    }

    private boolean jj_3R_8() {
        if (jj_3R_9()) return true;
        return false;
    }

    private boolean jj_3_27() {
        if (jj_scan_token(TRUE)) return true;
        return false;
    }

    private boolean jj_3_13() {
        if (jj_scan_token(IMP)) return true;
        if (jj_3R_8()) return true;
        return false;
    }

    private boolean jj_3R_13() {
        if (jj_3R_8()) return true;
        return false;
    }

    private boolean jj_3_24() {
        if (jj_3R_12()) return true;
        return false;
    }

    private boolean jj_3_23() {
        if (jj_scan_token(NEG)) return true;
        if (jj_3R_11()) return true;
        return false;
    }

    private boolean jj_3_22() {
        if (jj_scan_token(XOP)) return true;
        if (jj_3R_11()) return true;
        return false;
    }

    private boolean jj_3_21() {
        if (jj_scan_token(GOP)) return true;
        if (jj_3R_11()) return true;
        return false;
    }

    private boolean jj_3_11() {
        if (jj_scan_token(DUR)) return true;
        return false;
    }

    private boolean jj_3_20() {
        if (jj_scan_token(FOP)) return true;
        if (jj_3R_11()) return true;
        return false;
    }

    private boolean jj_3R_11() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3_20()) {
            jj_scanpos = xsp;
            if (jj_3_21()) {
                jj_scanpos = xsp;
                if (jj_3_22()) {
                    jj_scanpos = xsp;
                    if (jj_3_23()) {
                        jj_scanpos = xsp;
                        if (jj_3_24()) return true;
                    }
                }
            }
        }
        return false;
    }
